[TASK] Fix some styling issues and use modal dialog for errors
* Remove bottom margin from h3 to fix height of modal header
* Remove bottom margin from form to fix overflow of modal footer
* Add word-break to code tags to avoid horizontal scrolling
* Add margin to body so the redirect message looks good
* Include Twitter Bootstrap css before setup css
* Use modal layout for error messages
* Add missing titles for errors thrown about php execuatable/version
* Add versions numbers to version comparison error message
* Move jQuery to top of page to avoid inline JS breaking

Related: #38856
Related: #38857

--- a/Resources/Public/StyleSheet/Setup.css
+++ b/Resources/Public/StyleSheet/Setup.css
@@ -1,14 +1,19 @@
 body {
 	background: #eee url('../Images/TYPO3_logo.png') right top no-repeat;
+	margin: 2em;
+}
+
+code {
+	word-break: break-all;
+}
+
+form {
+	margin: 0;
 }
 
 legend {
 	font-size: 15px;
 	font-weight: bold;
-}
-
-h3 {
-	margin-bottom: 10px;
 }
 
 .alert-OK {
